# jp-azureopenai-samples

./: .gitignore  CONTRIBUTING.md  LICENSE.template  README.md  pyproject.toml  troubleshooting.md
.github/: dependabot.yml
.github/workflows/: 3.goal-achievement-adviser_app.yml  3.goal-achievement-adviser_infra.yml  5.deploy.yml  5.deploy_azd.yml  5.internal-document-search-deploy.yml  5.what-if.yml  bicep-audit.yml  feature-cd_app-backend-v3kwinjxodkwe.yml  internal-document-search-deploy-python.yml  main.yml  static-analysis.yml
1.call-center/: .gitignore  README.md
1.call-center/app/: LICENSE  app.py  requirements.txt
2.recipe-adviser/: .gitignore  README.md  azure.yaml
2.recipe-adviser/app/: .env.example  Dockerfile  compose.yml
2.recipe-adviser/infra/: main.bicep  main.parameters.json
3.goal-achievement-adviser/: .gitignore  README.md  azure.yaml
3.goal-achievement-adviser/infra/: main.bicep
3.goal-achievement-adviser/scripts/: .env.template  gpt_manage_embedding.py  requirements.txt  topics.jsonl
4.company-research/: .gitignore  README.md  azure.yaml
4.company-research/infra/: main.bicep  (+2 more)
4.company-search/: README.md  READMEDRAFT.md  azure.yaml
5.internal-document-search/: README.md  azure.yaml  cicd.md  deploy_from_azurecloudshell_without_azd.md  deploy_private_endpoint_ennabled.md  deploy_with_api_management.md  monitoring.md  troubleshooting.md
6.azureopenai-landing-zone-accelerator/: README.md  azure.yaml
7.internal-document-search/: README.md  azure.yaml  deploy_with_private_network.md
docs/: README.md  _sidebar.md  index.html
(+308 files in other folders)
